--- a/src/blocks/header/header.scss
+++ b/src/blocks/header/header.scss
@@ -19,7 +19,7 @@
     &__item {
         padding-right: 45px;
         padding-left: 35px;
-        color: $cape-code;
+        color: $title;
         font: 16px/22px $font-family-montserrat;
     }
 }
