--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,8 +5,10 @@
 @import "./parts/mixins";
 @import "./parts/global";
 @import "../blocks/header/header";
+@import "../blocks/footer/footer";
+@import "../blocks//home/home";
+@import "../blocks/home/popup/home-popup";
 // @import '../blocks/post/post';
 // @import '../blocks/customers/customers';
 // @import '../blocks/app/app';
-// @import '../blocks/footer/footer';
 
