--- a/src/styles/parts/_vars.scss
+++ b/src/styles/parts/_vars.scss
@@ -19,8 +19,11 @@ $transition-hover-off:       $transition-normal;
 $font-family-montserrat:        "Montserrat", sans-serif;
 $font-family-open-sans:         "Open Sans", sans-serif;
 
-$cape-code: #363838;
-$scorpion: #5a5a5a;
+$title: #363838;
+$default: #5a5a5a;
+$alto: #dfdfdf;
+$dove-gray: #707070;
+$silver-chalice:#a1a1a1;
 
 $white:#f4f6f9;
 $dark :#343030;
