--- a/src/blocks/footer/footer.scss
+++ b/src/blocks/footer/footer.scss
@@ -1,7 +1,112 @@
-footer{
-    width: 100%;
-    height: 96px;
-    color: $footer;
-    background: $bg;
-    border: 1px solid #000;
+.footer{
+
+    &__content {
+        padding: 60px 0 80px;
+        background-color: $alto;
+    }
+
+    &__inner{
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &__info{
+        width: 540px;
+    }
+
+    &__pos{
+        margin-right: 25px;
+    }
+
+    &__title {
+        margin-bottom: 14px;
+        color: $title;
+        font: 16px/23px $font-family-montserrat;
+    }
+
+    &__text {
+        max-width: 475px;
+        margin-bottom: 16px;
+    }
+
+    &__email{
+        display: inline-flex;
+        align-items: center;
+        margin-bottom: 22px;
+        color: $title;
+        font: 14px/28px $font-family-montserrat;
+
+        &:hover{
+            color: rgb(10, 226, 226);
+            fill: rgb(10, 226, 226);
+        }
+        
+    }
+
+    &__email-text{
+        margin-left: 14px;
+    }
+
+    &__form{
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &__input{
+        width: 100%;
+        height: 41px;
+        padding: 6px 10px 6px 18px;
+        border: 1px solid $title;
+        border-radius: 20px;
+
+        &::placeholder{
+            color: $silver-chalice;
+        }
+        
+    }
+
+    &__btn {
+        min-width: 160px;
+        height: 40px;
+        margin-left: 9px;
+        padding: 6px 12px;
+        color: $white;
+        background-color: $title;
+        border-radius: 20px;
+        cursor: pointer;
+    }
+
+    &__item{
+        margin-bottom: 14px;
+    }
+
+    &__social-link{
+        display: flex;
+        align-items: center;
+
+        &:hover{
+            color: rgb(94, 9, 179);
+            fill: rgb(94, 9, 179);
+        }
+    }
+
+    &__social-text {
+        margin-left: 14px;
+    }
+
+    &__menu-link{
+
+        &:hover{
+            color: rgb(94, 9, 179);
+        }
+    }
+
+    &__copyright{
+        padding: 42px 0 41px;
+        color: $silver-chalice;
+        text-align: center;
+        background-color: $title;
+    }
+    
+
 }
