--- a/src/styles/parts/_global.scss
+++ b/src/styles/parts/_global.scss
@@ -1,16 +1,16 @@
 .wrapper {
     display: flex;
     flex-direction: column;
-    min-height: 100%;
+    min-height: 100vh;
 }
 
 .main {
     flex: 1 0 auto;
 }
 
-.footer {
-    flex: 0 0 auto;
-}
+// .footer {
+//     flex: 0 0 auto;
+// }
 
 .container{
     max-width: 1140px;
