--- a/src/blocks/header/header-popup/header-popup.scss
+++ b/src/blocks/header/header-popup/header-popup.scss
@@ -26,6 +26,8 @@
         padding: 30px;
         background: rgb(230, 224, 224);
         border: 1px solid #000;
+        // transform: translate(0px, -100);
+        // transition: all 0.8s ease 0s;
     }
 
     &__close{
@@ -48,6 +50,15 @@
 }
 
 .is-open{
+    // transform: translate(0px, 0px);
     visibility: visible;
     opacity: 1;
+}
+
+.popup-link{
+    margin-right: 30px;
+}
+
+.is-lock{
+    overflow: hidden;
 }
