--- a/src/blocks/header/header.pug
+++ b/src/blocks/header/header.pug
@@ -1,4 +1,4 @@
-header.header
+header.header.lock-padding
     .container
         .header__inner
             nav.menu
@@ -9,8 +9,8 @@ header.header
                         a.menu__link(href="#") Gallery
             a.logo(href="#")
                 img(src="../assets/img/home/logo.png", alt="Логотип")
-            a.popup-link(href="#popup_1") popup-link
-            a.popup-link(href="#popup_2") popup-link
+            a.popup-link.js-popup-link(href="#popup_1") popup-link
+            a.popup-link.js-popup-link(href="#popup_2") popup-link
             nav.menu
                 ul.menu__list
                     li.menu__item
