--- a/src/blocks/home/home.scss
+++ b/src/blocks/home/home.scss
@@ -1,1 +1,5 @@
 @import "./forms/input";
+@import "./slider/slider";
+@import "./collection/collection";
+@import "./decor/decor";
+@import "./work-path/work-path";
