--- a/src/blocks/header/header-popup/header-popup.scss
+++ b/src/blocks/header/header-popup/header-popup.scss
@@ -2,6 +2,7 @@
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 99;
     width: 100%;
     height: 100%;
     overflow-x: hidden; // убираем горизонтальный скролл
@@ -51,7 +52,6 @@
 }
 
 .is-open{
-    // transform: translate(0px, 0px);
     visibility: visible;
     opacity: 1;
 
