--- a/src/styles/parts/_global.scss
+++ b/src/styles/parts/_global.scss
@@ -18,3 +18,9 @@
     margin: 0 auto;
     padding: 0 15px;
 }
+
+.container-fluid{
+    max-width: 1920px;
+    margin: 0 auto;
+    padding: 0 10px;
+}
