--- a/src/blocks/header/header.pug
+++ b/src/blocks/header/header.pug
@@ -8,7 +8,7 @@ header.header.lock-padding
                     li.menu__item
                         a.menu__link(href="#") Gallery
             a.logo(href="#")
-                img(src="../assets/img/home/logo.png", alt="Логотип")
+                img(src="../assets/img/header/logo.png", alt="Логотип")
             a.popup-link.js-popup-link(href="#popup_1") popup-link
             a.popup-link.js-popup-link(href="#popup_2") popup-link
             nav.menu
