--- a/src/blocks/home/collection/collection.pug
+++ b/src/blocks/home/collection/collection.pug
@@ -8,7 +8,7 @@ section.new-collection
             each val in ["1", "2", "3", "4", "5"]
                 li.collection__item
                     a.collection__link(href="#") 
-                        img.collection__img(src=`../assets/img/home/furniture-${val}.png`, alt="")
+                        img.collection__img(src=`../assets/img/home/collection/furniture-${val}.png`, alt="" width="350" height="350")
                         .collection__info 
                             h6.collection__info-title 
                                 |   Truffaut literally trust
