--- a/src/blocks/home/home.pug
+++ b/src/blocks/home/home.pug
@@ -6,3 +6,5 @@ main.main
     include decor/decor
     include work-path/work-path
     include ../header/header-popup/header-popup
+    include gallery/gallery 
+    include blog-box/blog-box
