--- a/src/blocks/home/home.scss
+++ b/src/blocks/home/home.scss
@@ -1,5 +1,7 @@
-@import "./forms/input";
-@import "./slider/slider";
-@import "./collection/collection";
-@import "./decor/decor";
-@import "./work-path/work-path";
+@import "forms/input";
+@import "slider/slider";
+@import "collection/collection";
+@import "decor/decor";
+@import "work-path/work-path";
+@import "gallery/gallery";
+@import "blog-box/blog-box";
