--- a/src/blocks/home/slider/slider.pug
+++ b/src/blocks/home/slider/slider.pug
@@ -2,21 +2,21 @@ section.top
     .top__slider.slider
         .top__slider-wrapper.swiper-wrapper
             .top__slider-slide.swiper-slide
-                img.top__slider-img(src="../assets/img/home/slider.png") 
+                img.top__slider-img(src="../assets/img/home/slider/slider.png") 
                 .top__slider-info
                     h2.top__slider-title 
                         |   Furniture collection 1
                     p.top__slider-text
                         |   Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical drinking vinegar austint
             .top__slider-slide.swiper-slide
-                img.top__slider-img(src="../assets/img/home/slider.png") 
+                img.top__slider-img(src="../assets/img/home/slider/slider.png") 
                 .top__slider-info
                     h2.top__slider-title 
                         |   Furniture collection 2
                     p.top__slider-text
                         |   Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical drinking vinegar austint
             .top__slider-slide.swiper-slide
-                img.top__slider-img(src="../assets/img/home/slider.png") 
+                img.top__slider-img(src="../assets/img/home/slider/slider.png") 
                 .top__slider-info
                     h2.top__slider-title 
                         |   Furniture collection 3
