--- a/src/blocks/home/decor/decor.scss
+++ b/src/blocks/home/decor/decor.scss
@@ -1,6 +1,6 @@
 .decor{
     padding: 170px 0 156px;
-    background-image: url("../assets/img/home/decor.jpg");
+    background-image: url("../assets/img/home/decor/decor.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 
