--- a/src/blocks/home/collection/collection.scss
+++ b/src/blocks/home/collection/collection.scss
@@ -95,3 +95,15 @@
     }
 
 }
+
+.test{
+    width: 500px;
+    height: 300px;
+    border: 1px solid #000;
+
+    &__box{
+        width: 40px;
+        height: 40px;
+        border: 1px solid #000;
+    }
+}
