--- a/src/styles/parts/_global.scss
+++ b/src/styles/parts/_global.scss
@@ -2,16 +2,15 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    padding-top: 120px;
     overflow: hidden;
 }
 
 .main {
     flex: 1 0 auto;
+    padding-top: 120px;
 }
 
-// .footer {
-//     flex: 0 0 auto;
-// }
 
 .container{
     max-width: 1140px;
