--- a/src/blocks/header/header.pug
+++ b/src/blocks/header/header.pug
@@ -9,16 +9,15 @@ header.header.lock-padding
                         a.menu__link(href="#") Gallery
             a.logo(href="#")
                 img(src="../assets/img/header/logo.png", alt="Логотип")
-            a.popup-link.js-popup-link(href="#popup_1") popup-link
-            a.popup-link.js-popup-link(href="#popup_2") popup-link
             nav.menu
                 ul.menu__list
                     li.menu__item
                         a.menu__link(href="#") Blog
                     li.menu__item
                         a.menu__link(href="#") Contact
-            svg.header__btn.js-header__btn(width=37 height=29) 
-                use(xlink:href="../assets/img/icons/sprite.svg#icon-menu")
+            a.popup-link.js-popup-link(href="#popup_1")
+                svg.header__btn.js-header__btn(width=37 height=29) 
+                    use(xlink:href="../assets/img/icons/sprite.svg#icon-menu")
 
 
 
