--- a/src/blocks/home/home.pug
+++ b/src/blocks/home/home.pug
@@ -5,6 +5,6 @@ main.main
     include collection/collection
     include decor/decor
     include work-path/work-path
-    include ../header/header-popup/header-popup
     include gallery/gallery 
     include blog-box/blog-box
+    include popup/popup
