--- a/src/styles/parts/_vars.scss
+++ b/src/styles/parts/_vars.scss
@@ -3,6 +3,7 @@ $screen-sm:                  320px;
 $screen-md:                  768px;
 $screen-lg:                  1280px;
 $screen-xl:                  1440px;
+//992,1024
 
 // Переходы
 $transition-slower:          0.5s;
