--- a/src/blocks/home/blog-box/blog-box.pug
+++ b/src/blocks/home/blog-box/blog-box.pug
@@ -5,7 +5,7 @@ section.blog-box
         .blog-box__items 
             .blog-box__item
                 a.blog-box__link(href="#") 
-                    img.blog-box__img(src="../assets/img/home/blog/blog-1.png", alt="blog img")
+                    img.blog-box__img(src="../assets/img/home/blog/blog-1.png"  alt="blog img" width="540" height="307")
                 .blog-box__links 
                     span.blog-box__date 
                         | March 12, 2020
@@ -18,7 +18,7 @@ section.blog-box
                         | Listicle actually selvage activated charcoal for the drinking vinegar 
             .blog-box__item
                 a.blog-box__link(href="#") 
-                    img.blog-box__img(src="../assets/img/home/blog/blog-2.png", alt="blog img")
+                    img.blog-box__img(src="../assets/img/home/blog/blog-2.png"  alt="blog img" width="540" height="307")
                 .blog-box__links 
                     span.blog-box__date 
                         | September 28,2020
