--- a/src/blocks/home/popup/popup.pug
+++ b/src/blocks/home/popup/popup.pug
@@ -3,7 +3,9 @@
         .popup__content
             a.popup__close.js-popup__close(href="#") x 
             p.popup__title
-                | Popup
+                | #[a.popup-link.js-popup-link(href="#popup_2") POPUP 2]
+            p.popup__title
+                | #[a.popup-link.js-popup-link(href="#popup_3") POPUP 3]
             p.popup__text
                 | Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi commodi, aut necessitatibus aperiam dignissimos vero blanditiis fugit corporis mollitia modi atque autem porro sed suscipit tempora molestias fugiat voluptatibus sequi. Architecto, a atque id quasi deserunt error aliquam. Fugiat, eius. At, dolorum. Numquam, illo aliquam? Provident aut velit et nostrum sapiente, ea repellat. Neque, laudantium iusto quidem ad aspernatur velit quas sequi, in perspiciatis, repudiandae ducimus. Molestias, quod repudiandae magnam repellat nostrum adipisci reiciendis ab atque quibusdam, voluptates voluptatibus consectetur totam, fuga et eos. Possimus veniam excepturi eaque dolor, provident et, ullam voluptatibus iure ad maiores, iusto corporis dolorem aspernatur!
 .popup#popup_2
@@ -12,7 +14,6 @@
             a.popup__close.js-popup__close(href="#") x 
             p.popup__title
                 | POPUP 2
-                | #[a.popup-link.js-popup-link(href="#popup_3") POPUP 3]
             p.popup__text
                 | Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ullam molestias, officiis earum voluptatum nam. Modi beatae nam suscipit  sed aliquid, aspernatur, a, eligendi at accusantium amet iste temporibus tenetur.
 .popup#popup_3
@@ -20,6 +21,6 @@
         .popup__content
             a.popup__close.js-popup__close(href="#") x 
             p.popup__title
-                | Popup 33333333
+                | Popup 3
             p.popup__text
                 | Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi commodi, aut necessitatibus aperiam dignissimos vero blanditiis fugit corporis mollitia modi atque autem porro sed suscipit tempora molestias fugiat voluptatibus sequi. Architecto, a atque id quasi deserunt error aliquam. Fugiat, eius. At, dolorum. Numquam, illo aliquam? Provident aut velit et nostrum sapiente, ea repellat. Neque, laudantium iusto quidem ad aspernatur velit quas sequi, in perspiciatis, repudiandae ducimus. Molestias, quod repudiandae magnam repellat nostrum adipisci reiciendis ab atque quibusdam, voluptates voluptatibus consectetur totam, fuga et eos. Possimus veniam excepturi eaque dolor, provident et, ullam voluptatibus iure ad maiores, iusto corporis dolorem aspernatur!
