--- a/src/blocks/home/popup/popup.scss
+++ b/src/blocks/home/popup/popup.scss
@@ -2,7 +2,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 99;
+    z-index: $z-top;
     width: 100%;
     height: 100%;
     overflow-x: hidden; // убираем горизонтальный скролл
