--- a/src/styles/parts/_mixins.scss
+++ b/src/styles/parts/_mixins.scss
@@ -41,6 +41,12 @@
     }
 }
 
+@mixin for-desktop-up {
+    @media ( min-width: 1200px ) {
+        @content; 
+    }
+}
+
 @mixin w-range($screen1, $screen2) {
     @media ( min-width: $screen1 ) and ( max-width: $screen2 - 1px ) {
         @content;
